--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Chikmagalur-homestay</h1>
       <h2 class="project-tagline">Homestay in Chikmagalur, Homestay in Sakleshpur, Chikmagalur Homestay Tariff, Sakleshpur Homestay Tariff, </h2>
-      <a href="https://github.com/Shanavi/Chikmagalur-Homestay" class="btn">Home</a>
+      <a href="http://shanavi.github.io/Chikmagalur-Homestay/" class="btn">Home</a>
       <a href="http://www.mekanagadde.com/tariff.html" class="btn">Chikmagalur Homestay Tariff</a>
       <a href="http://www.mekanagadde.com/blog.html" class="btn">Blog</a>
     </section>
