--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Chikmagalur-homestay</h1>
+      <h1 class="project-name">Chikmagalur Homestay</h1>
       <h2 class="project-tagline">Homestay in Chikmagalur, Homestay in Sakleshpur, Chikmagalur Homestay Tariff, Sakleshpur Homestay Tariff, </h2>
       <a href="http://shanavi.github.io/Chikmagalur-Homestay/" class="btn">Home</a>
       <a href="http://www.mekanagadde.com/tariff.html" class="btn">Chikmagalur Homestay Tariff</a>
@@ -30,9 +30,9 @@
          
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="http://www.mekanagadde.com/">Homestay in Chikmagalur</a></span>
+        <span class="site-footer-owner"><a href="http://www.mekanagadde.com/">Chikmagalur Homestay</a></span>
 
-        <span class="site-footer-owner"><a href="http://www.mekanagadde.com/">Homestay in Sakleshpur</a></span>
+        <span class="site-footer-owner"><a href="http://www.mekanagadde.com/">Sakleshpur Homestay</a></span>
       </footer>
 
     </section>
