--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
       <h1 class="project-name">Chikmagalur Homestay</h1>
       <h2 class="project-tagline">Homestay in Chikmagalur, Homestay in Sakleshpur, Chikmagalur Homestay Tariff, Sakleshpur Homestay Tariff, </h2>
       <a href="http://shanavi.github.io/Chikmagalur-Homestay/" class="btn">Home</a>
-      <a href="http://www.mekanagadde.com/tariff.html" class="btn">Chikmagalur Homestay Tariff</a>
-      <a href="http://www.mekanagadde.com/blog.html" class="btn">Blog</a>
+      <a href="https://www.mekanagadde.com/tariff/" class="btn">Chikmagalur Homestay Tariff</a>
+      <a href="https://www.mekanagadde.com/blog/" class="btn">Homestay Blog</a>
     </section>
         <div>
             <div>
                 <h1>
 <a id="homestay-in-chikmagalur" class="anchor" href="#homestay-in-chikmagalur" aria-hidden="true"><span class="octicon octicon-link"></span></a>Homestay in Chikmagalur</h1>
-                <p>Mekanagadde Homestay is the best homestay in Chikmagalur for relaxation from the urban living for a short period of time. Bassically many guests and travellers come form different parts of India and many come from Bangalore, Mysore, Mangalore of Karnataka state. More details can be found at <a href="/about">Mekanagadde Homestay in Chikmagalur</a></p>
+                <p>Mekanagadde Homestay is the best homestay in Chikmagalur for relaxation from the urban living for a short period of time. Bassically many guests and travellers come form different parts of India and many come from Bangalore, Mysore, Mangalore of Karnataka state. More details can be found at <a href="https://www.mekanagadde.com/about-us/">Mekanagadde Homestay in Chikmagalur</a></p>
          
             <ul>
-                <li><a href="http://www.mekanagadde.com/">Homestay in Chikmagalur</a></li>
-                <li><a href="http://www.mekanagadde.com/">Homestay in Sakelshpur</a></li>
+                <li><a href="https://www.mekanagadde.com/">Homestay in Chikmagalur</a></li>
+                <li><a href="https://www.mekanagadde.com/">Homestay in Sakelshpur</a></li>
             </ul>
          
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="http://www.mekanagadde.com/">Chikmagalur Homestay</a></span>
+        <span class="site-footer-owner"><a href="https://www.mekanagadde.com/">Chikmagalur Homestay</a></span>
 
-        <span class="site-footer-owner"><a href="http://www.mekanagadde.com/">Sakleshpur Homestay</a></span>
+        <span class="site-footer-owner"><a href="https://www.mekanagadde.com/">Sakleshpur Homestay</a></span>
       </footer>
 
     </section>
